# soft-posit-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.riscv  QUICK_START_RISCV.md  README.md  RISC-V_QEMU_INSTRUCTIONS.md  build_python_wrapper.sh  format_code.sh
.github/: GITHUB_ACTIONS.md
.github/workflows/: README.md  benchmarks.yml  build-macos.yml  build-riscv.yml  build-ubuntu.yml  ci.yml  code-quality.yml  labeler.yml  local-dev.yml  local-tests.yml  multi-platform-build.yml  release.yml  shared-build.yml  shared-setup.yml  tests.yml
benchmarks/epilon-tests/: main.cpp
benchmarks/epilon-tests/common_tests/: test_utils.cpp  test_utils.h
benchmarks/epilon-tests/p16_tests/: advanced_tests.cpp  arithmetic_tests.cpp  bit_operations_tests.cpp  comparison_operator_tests.cpp  math_functions_tests.cpp  special_values_tests.cpp  specific_values_tests.cpp
benchmarks/epilon-tests/p32_tests/: advanced_tests.cpp  arithmetic_tests.cpp  bit_operations_tests.cpp  comparison_operator_tests.cpp  conversion_tests.cpp  increment_decrement_tests.cpp  math_functions_tests.cpp  specific_values_tests.cpp
benchmarks/epilon-tests/p8_tests/: advanced_tests.cpp  arithmetic_tests.cpp  bit_operations_tests.cpp  comparison_operator_tests.cpp  conversion_tests.cpp  increment_decrement_tests.cpp  inverse_trig_functions_tests.cpp  logarithm_functions_tests.cpp  math_functions_tests.cpp  rounding_functions_tests.cpp  trigonometric_functions_tests.cpp
benchmarks/epilon-tests/q16_tests/: q16_tests.cpp
benchmarks/epilon-tests/q32_tests/: q32_tests.cpp
benchmarks/epilon-tests/q8_tests/: q8_tests.cpp
benchmarks/performance/: p16_bench.cpp  p32_bench.cpp  p8_bench.cpp
examples/: CMakeLists.txt  README.md
examples/control_theory_stabilization/: control_stabilization  control_stabilization.cpp
examples/control_theory_stabilization/control_stabilization.dSYM/Contents/: Info.plist
examples/control_theory_stabilization/control_stabilization.dSYM/Contents/Resources/DWARF/: control_stabilization
examples/control_theory_stabilization/control_stabilization.dSYM/Contents/Resources/Relocations/aarch64/: control_stabilization.yml
examples/control_theory_stabilization/data/control_theory/: simulation_data.csv
examples/fourier_transform/: fourier_transform.cpp
examples/julia_set_zoom/: CMakeLists.txt  README.md  julia_set_comparison.cpp  julia_set_float.cpp  julia_set_posit.cpp
examples/mandelbrot/: mandelbrot.cpp  posit_mandelbrot.cpp
examples/matrix_inverse/: matrix_inverse  matrix_inverse.cpp
examples/matrix_precision/: matrix_multiplication.cpp
examples/multiplication_closure/: multiplication_closure.cpp
include/: Matrix.h  internals.h  posit_ops.h  softposit.h  softposit_cpp.h  softposit_types.h
include/8086-SSE/: platform.h
python/: INSTALL.md  README.md  basic_test.py  setup.py  simple_example.py  simplified_softposit.i  softposit_example.py  softposit_python.i  test_softposit.py
scripts/: build_riscv.sh  run_riscv_tests.sh
src/: c_convertDecToPosit16.c  c_convertDecToPosit32.c  c_convertDecToPosit8.c  c_convertDecToPositX1.c  c_convertPosit16ToDec.c  c_convertPosit32ToDec.c  c_convertPosit8ToDec.c  c_convertPositX1ToDec.c  c_convertQuire16ToPosit16.c  c_convertQuire32ToPosit32.c  c_convertQuire8ToPosit8.c  c_convertQuireX2ToPositX2.c  c_int.c  i32_to_p16.c  i32_to_p32.c  i32_to_p8.c  i32_to_pX1.c  i32_to_pX2.c  i64_to_p16.c  i64_to_p32.c  i64_to_p8.c  i64_to_pX2.c  p16_acos_pi.c  p16_add.c  p16_asin_pi.c  p16_atan_pi.c  p16_ceil.c  p16_cos_pi.c  p16_div.c  p16_eq.c  p16_exp.c  p16_exp2.c  p16_floor.c  p16_le.c  p16_ln.c  p16_log2.c  p16_lt.c  p16_mul.c  p16_mulAdd.c  p16_mulAdd_subC.c  (+139 more)
tests/: main.cpp
tests/common_tests/: test_utils.cpp  test_utils.h
tests/p16_tests/: advanced_tests.cpp  arithmetic_tests.cpp  bit_operations_tests.cpp  conversion_tests.cpp  increment_decrement_tests.cpp  inverse_trig_functions_tests.cpp  logarithm_functions_tests.cpp  math_functions_tests.cpp  p16_test.cpp  rounding_functions_tests.cpp  special_values_tests.cpp  specific_values_tests.cpp  trig_pi_functions_tests.cpp
tests/p32_tests/: advanced_tests.cpp  arithmetic_tests.cpp  bit_operations_tests.cpp  comparison_operator_tests.cpp  increment_decrement_tests.cpp  math_functions_tests.cpp  p32_test.cpp  rounding_functions_tests.cpp  special_values_tests.cpp
tests/p8_tests/: advanced_tests.cpp  arithmetic_tests.cpp  conversion_tests.cpp  increment_decrement_tests.cpp  inverse_trig_functions_tests.cpp  logarithm_functions_tests.cpp  math_functions_tests.cpp  p8_test.cpp  quire_tests.cpp  rounding_functions_tests.cpp  special_values_tests.cpp  specific_values_tests.cpp  trigonometric_functions_tests.cpp
tests/q16_tests/: q16_tests.cpp
tests/q32_tests/: q32_tests.cpp
tests/q8_tests/: q8_tests.cpp
